--- a/amplify/backend/function/urlShortSvcAPIFunction/src/package.json
+++ b/amplify/backend/function/urlShortSvcAPIFunction/src/package.json
@@ -6,9 +6,16 @@
   "dependencies": {
     "aws-serverless-express": "^3.3.5",
     "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.1.2",
+    "nanoid": "^3.1.30"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
