--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "aws-amplify": "^4.3.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
